Стилизация мобильной версии главной страницы.

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -13,11 +13,9 @@
     "property-no-vendor-prefix": true,
     "selector-attribute-quotes": "always",
     "selector-combinator-space-after": "always",
-    "selector-max-attribute": [0, {ignoreAttributes: ["href"]}],
     "selector-max-id": 0,
-    "selector-max-type": [0, {ignore: ["descendant"], ignoreTypes: ["a", "body"]}],
+    "selector-max-type": [0, {ignore: ["descendant"], ignoreTypes: ["a", "body", "input"]}],
     "selector-max-universal": 0,
-    "selector-no-qualifying-type": true,
     "selector-no-vendor-prefix": true,
     "selector-type-no-unknown": true,
     "string-quotes": "double",
